--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.8.6",
     "cruip-js-toolkit": "^1.0.3",
-    "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.34.1",
     "tailwindcss": "^2.1.1",
     "web-vitals": "^1.1.1"
   },
